--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,6 +175,7 @@ dependencies = [
     "django-cors-headers==4.9.0",
     "django-crispy-forms==2.5",
     "django-environ==0.12.0",
+    "django-filter>=25.2",
     "django-model-utils==5.0.0",
     "django-redis==6.0.0",
     "djangorestframework==3.16.1",
